--- a/receitas.html
+++ b/receitas.html
@@ -21,20 +21,74 @@
             </div>
         </header>
 
-        <div id="wrapper">
-            <div class="info">
-                <h1>As melhores receitas</h1>
-                <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro</p>
-            </div>
-            
-            <img src="/assets/chef.png" alt="Chef">
-        </div>
-
-        <div class="title-access">
-            <h2>Mais acessadas</h2>         
-        </div>
 
         <section class="mais_acessados">
+            <div class="card" id="burger">
+                <div class="card_image-container">
+                    <img src="/assets/burger.png" alt="burger">
+                </div>
+                <div class="card_content">
+                    <p>Triplo bacon burger</p>
+                </div>
+                <div class="card_info">
+                    <p>por Jorge Relato</p>
+                </div>
+            </div>
+            <div class="card" id="pizza">
+                <div class="card_image-container">
+                    <img src="/assets/pizza.png" alt="pizza">
+                </div>
+                <div class="card_content">
+                    <p>Pizza 4 estações</p>
+                </div>
+                <div class="card_info">
+                    <p>por Fabiana Melo</p>
+                </div>
+            </div>
+            <div class="card" id="espaguete">
+                <div class="card_image-container">
+                    <img src="/assets/espaguete.png" alt="espaguete">
+                </div>
+                <div class="card_content">
+                    <p>Espaguete</p>
+                </div>
+                <div class="card_info">
+                    <p>por Júlia Kinoto</p>
+                </div>
+            </div>
+            <div class="card" id="lasanha">
+                <div class="card_image-container">
+                    <img src="/assets/lasanha.png" alt="lasanha">
+                </div>
+                <div class="card_content">
+                    <p>Lasanha mac n' cheese</p>
+                </div>
+                <div class="card_info">
+                    <p>por Juliano Vieira</p>
+                </div>
+            </div>
+            <div class="card" id="doce">
+                <div class="card_image-container">
+                    <img src="/assets/doce.png" alt="doce">
+                </div>
+                <div class="card_content">
+                    <p>Docinhos pão-do-céu</p>
+                </div>
+                <div class="card_info">
+                    <p>por Ricardo Golvea</p>
+                </div>
+            </div>
+            <div class="card" id="asinhas">
+                <div class="card_image-container">
+                    <img src="/assets/asinhas.png" alt="asinhas">
+                </div>
+                <div class="card_content">
+                    <p>Asinhas de frango ao barbecue</p>
+                </div>
+                <div class="card_info">
+                    <p>por Vania Steroski</p>
+                </div>
+            </div>
             <div class="card" id="burger">
                 <div class="card_image-container">
                     <img src="/assets/burger.png" alt="burger">
@@ -121,11 +175,13 @@
             </div>
         </div>
 
+
         <div class="footer">
             <p>Todos direitos reservados, receitas Foodfy</p>
         </div>
 
         <script src="scripts.js"></script>
+
     </body>
 
 
